media/css/zamboni/zamboni.css
/* ... */
.listing .contribute a {
    font-weight: bold;
}

.html-rtl .listing .contribute {
    float: right;
}

.listing .item {
    overflow: visible;
}

.listing .item h3 {
    float: left;
}

.html-rtl .listing .item h3 {
    float: right;
}

.item .install,
.results .item .install {
    float: left;
    clear: both;
    min-height: 2.75em;
    margin-left: -3px;
}

.html-rtl .item .install {
    float: right;
    margin-right: -3px;
    margin-left: 0;
}

.item .install-button {
    margin-bottom: .25em;
}

.item-info .notavail,
.item-info .addon-rating,
.item-info .downloads,
.item-info .updated {
    font-size: .923em; /* 12px */
    padding-top: 1px;
    margin: 0;
    clear: both;
}

.html-rtl .item-info .notavail,
.html-rtl .item-info .addon-rating,
.html-rtl .item-info .downloads,
.html-rtl .item-info .updated {
    margin: 0;
}

.listing .item blockquote {
    clear: left;
    overflow-x: hidden;
}

.html-rtl .listing .item blockquote {
    clear: right;
    padding-right: 0;
    padding-left: 16em;
}

.listing .item blockquote img {
    max-width: 100%;
}

.results-head {
    position: relative;
    width: auto;
    padding-right: 350px;
}

.html-rtl .results-head {
    padding-right: 0;
    padding-left: 350px;
}

.results-head .suggest {
    padding-left: 10px;
    font-size: .923em;
    line-height: 1.4;
    position: absolute;
    width: 280px;
    padding: 6px 8px 6px 28px;
    background: #ffc url("../../img/zamboni/icons/suggest-help.png") 6px .5em no-repeat;
    border: 1px solid #fc6;
    -moz-box-shadow: 2px 2px 0 #b5d9e5;
    -webkit-box-shadow: 2px 2px 0 #b5d9e5;
    box-shadow: 2px 2px 0 #b5d9e5;
    top: 0;
    right: 0;
}


.results-head .suggest a {
    font-weight: bold;
}

.results-head .suggest strong {
    display: block;
}

.results-head .suggest .point {
    position: relative;
    left: -28px;
    margin-bottom: -19px;
    display: block;
    padding: 0 0 20px 28px;
    background: transparent url("../../img/zamboni/suggest-point.png") 8px bottom no-repeat;
}

.html-rtl .results-head .suggest {
    padding: 6px 28px 6px 8px;
    background-position: 292px .5em;
}

.html-rtl .results-head .suggest .point {
    left: auto;
    right: -28px;
    padding: 0 28px 20px 0;
    background-image: url("../../img/zamboni/suggest-point-rtl.png");
    background-position: 255px bottom;
}

.other-categories,
#refine-results,
.versions .primary > .warning {
    background: #fff;
    border: 1px solid #c8e8f3;
}

.versions .primary > .warning h2 {
    font-style: italic;
    margin: 0;
}

.versions .primary > .warning {
    border-color: #C63717;
}

.versions .primary > .warning p {
    margin-top: .5em;
}

.version nav.further-navigation {
    display: block;
    padding-top: .5em;
    margin-top: 1em;
    clear: right;
    border-top: 1px dotted #B5D9E5;
}

.version a.source-code {
    display: block;
    margin-top: 1em;
    padding-left: 20px;
}

.version a.more-info {
    float:right;
    margin: 0;
}

.item.version {
    padding: 2em;
}

.version .item-info {
    margin-right: 0;
    width: auto;
}

.item.version h5 {
    font-size: 1em;
}

.article.version {
    overflow: visible;
}

.article.version blockquote {
    clear: left;
    overflow-x: hidden;
}

.article.version h3 {
    font-family: "helvetica neue",arial,helvetica,sans-serif;
    font-size:1em;
    float: left;
    margin-top:0;
}

.article.version h3 span:before {
    content: '\02013\00a0';
}

.other-categories .items {
    color: rgb(114, 142, 164);
    font-size: 10px; /* or the corresponding size in em's  */
    margin-left: 0.25em;
    vertical-align: 1px;
}

#refine-results h5 {
    color: #235;
}

.secondary ul.refinements {
    border-bottom: 1px dotted #94bfce;
    padding-bottom: 1em;
    margin-bottom: 1em;
}

#refine-results div:last-child ul.refinements {
    border-bottom: 0;
    margin-bottom: 0;
    padding-bottom: 0;
}

.secondary ul.refinements li a {
    color: #05e;
    padding: 0 0 0 10px;
    font-weight: bold;
    font-size: .923em;
}

.html-rtl .secondary ul.refinements li a {
    padding: 0 10px 0 0;
}

.secondary ul.refinements li.selected a {
    background: transparent url("../../img/zamboni/arrow-right-blue.png") 0 .5em no-repeat;
}

.html-rtl .secondary ul.refinements li.selected a {
    background: transparent url("../../img/zamboni/arrow-left-blue.png") 100% .5em no-repeat;
}

/** =Report abuse form *********/
.abuse {
    border: 0;
    padding: 1em 0 0;
}

.abuse ol {
    list-style: none;
    margin: 0;
    padding: 0;
}

.abuse label {
    font-weight: normal;
}

.abuse legend {
    font-family: inherit;
    font-size: inherit;
    font-weight: bold;
}

.abuse legend span {
    padding-left: 25px;
    color: #05e;
    background: transparent url("../../img/amo2009/icons/icons.png") 0 -1700px no-repeat;
}

.html-rtl .abuse legend span {
    padding-left: 0;
    padding-right: 25px;
    background-position: 100% -1700px;
}

/* TODO(jbalogh): remove hasJS when we add the abuse pane. */
.hasJS .abuse legend span {
    cursor: pointer;
}

.hasJS .abuse legend span:hover {
    text-decoration: underline;
}

.abuse textarea {
    border: 1px solid #5875A0;
    width: 60%;
}


/** =Personas Details page *********/
.persona-img {
    height: 100px;
    overflow: hidden;
}
#persona-summary table {
    display: block;
    width: 320px;
    float: right;
}
#persona-summary table th {
    width: auto;
    min-width: 120px;
    vertical-align: top;
}
#persona-summary table .artist td {
    font-weight: bold;
}
#persona-summary .share-arrow {
    position: absolute;
    z-index: 100;
}
#persona #more-personas {
    margin-bottom: 3em;
}
#persona #more-personas h3 {
    margin-top: 0;
}
#persona #more-category {
    width: 65.6%;
    float: left;
}
.html-rtl #persona #more-category {
    float: right;
}
#persona #more-category.persona-list-3col {
    width: 100%;
}
#persona #more-artist {
    width: 32.5%;
    float: right;
}
.html-rtl #persona #more-artist {
    float: left;
}
/* ... */

